--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-standard": "^6.1.0",
+    "cz-cli": "^1.0.0",
     "cz-customizable": "^6.3.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
@@ -33,8 +34,8 @@
     "sass-loader": "^12.0.0"
   },
   "config": {
-  "commitizen": {
-    "path": "node_modules/cz-customizable"
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
   }
-}
 }
